--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Kabel\\Sign\\SignServiceProvide"
+                "Kabel\\Sign\\SignServiceProvider"
             ]
         }
     },
